--- a/about.html
+++ b/about.html
@@ -1,45 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" type="text/css" href="styles/styles.css">
-        <link rel="stylesheet" type="text/css" href="styles/aboutStyles.css">
-        <title>About Me</title>
-        <div class="topnav">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a class="active" href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-              </ul>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="styles/styles.css" />
+    <link rel="stylesheet" type="text/css" href="styles/aboutStyles.css" />
+    <title>About Me</title>
+    <div class="topnav">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+  </head>
+
+  <main>
+    <body>
+      <h1 class="title">About Me</h1>
+
+      <h2 class="title">Academics</h2>
+      <hr class="small-seperator" />
+      <div class="container">
+        <div class="block text">
+          <p><strong>School</strong>: The Univeristy of Texas at San Antonio</p>
+          <p><strong>Major</strong>: Computer Science</p>
+          <p><strong>Projected Graduation</strong>: December 2023</p>
         </div>
-    </head>
-    
-    <main>
-        <body>
-
-            <h1 class="title">About Me</h1>
-            
-            <h2 class="title">Academics</h2>
-            <hr class="small-seperator">
-            <div class="container">
-                <div class="block text">
-                        <p><strong>School</strong>: The Univeristy of Texas at San Antonio</p>
-                        <p><strong>Major</strong>: Computer Science</p>
-                        <p><strong>Projected Graduation</strong>: Spring 2024</p>
-                </div>
-                <div class="block image">
-                    <img class="schoolLogo" src="images/utsaLogo.png" />
-                </div>
-            </div>
-            <div class="personalInfo">
-                <h2>Personal Information</h2>
-                <hr class="small-seperator">
-                <p><strong>Age</strong>: 20</p>
-                <p><strong>Birthday</strong>: October 11th</p>    
-            </div>
-
-        </body>
-    </main>
+        <div class="block image">
+          <img class="schoolLogo" src="images/utsaLogo.png" />
+        </div>
+      </div>
+      <div class="personalInfo">
+        <h2>Personal Information</h2>
+        <hr class="small-seperator" />
+        <p><strong>Age</strong>: 20</p>
+      </div>
+    </body>
+  </main>
 </html>
