--- a/contact.html
+++ b/contact.html
@@ -7,19 +7,29 @@
         <link rel="stylesheet" type="text/css" href="styles/styles.css">
         <link rel="stylesheet" type="text/css" href="styles/contactStyles.css">
         <title>Contact Me</title>
-        <div class="topnav">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a class="active" href="contact.html">Contact</a></li>
-              </ul>
-        </div>
+        
     </head>
     
     <main>
         <body>
+            <div class="topnav">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a class="active" href="contact.html">Contact</a></li>
+                  </ul>
+            </div>
 
-            <h1 class="title">Contact Me Page</h1>
+            <h1 class="title">Contact Me</h1>
+
+            <div class="container">
+                <div class="block image"></div>
+                <div class="block text">
+                    <p>Add me on LinkedIn!</p>
+                </div>
+            </div>
+
+
 
         </body>
     </main>
