--- a/index.html
+++ b/index.html
@@ -1,49 +1,93 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" type="text/css" href="styles/styles.css">
-        <link rel="stylesheet" type="text/css" href="styles/indexStyles.css">
-        <title>Christopher Cordova</title>
-    </head>
-    
-    <main>
-        <body>
-            <div class="topnav">
-                <ul>
-                    <li><a class="active" href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                  </ul>
-            </div>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="styles/styles.css" />
+    <link rel="stylesheet" type="text/css" href="styles/indexStyles.css" />
+    <title>Christopher Cordova</title>
+  </head>
 
-            <h1 class="title">Welcome to Christopher's Website</h1>
+  <main>
+    <body>
+      <div class="topnav">
+        <ul>
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
 
-            <div class="links">
-                <p><a class="link" target="_blank" href="https://www.linkedin.com/in/christophercordova/">LinkedIn</a></p>
-                <p><a class="link" target="_blanks" href="https://github.com/ChrisCordova1">GitHub</a></p>
-                <p><a class="link" href="mailto:cordovac01@outlook.com">Email</a></p>
-            </div>
+      <h1 class="title">Welcome to Christopher's Website</h1>
 
-            <hr class="seperator">
+      <div class="links">
+        <p>
+          <a
+            class="link"
+            target="_blank"
+            href="https://www.linkedin.com/in/christophercordova/"
+            >LinkedIn</a
+          >
+        </p>
+        <p>
+          <a
+            class="link"
+            target="_blanks"
+            href="https://github.com/ChrisCordova1"
+            >GitHub</a
+          >
+        </p>
+        <p><a class="link" href="mailto:cordovac01@outlook.com">Email</a></p>
+      </div>
 
-            <div class="container">
-                <div class="block image">
-                    <img src="images/KSP01566-Edit-2.jpg" />
-                </div>
-                <div class="block text">   
-                    <h2>About Me</h2>
-                    <p>Growing up I was always curious about technology and enjoyed watching YouTube videos about programming that I barely understood. That sparked my passion for Computer Science and now I am proud to be a First Generation Computer Science major at the University of Texas - San Antonio.</p>
+      <hr class="seperator" />
 
-                    <button class="aboutMeButton" type="button" onclick="window.location.href='about.html';">Learn More</button>
-                </div>
-            </div>
+      <div class="container">
+        <div class="block image">
+          <img src="images/KSP01566-Edit-2.jpg" />
+        </div>
+        <div class="block text">
+          <h2>About Me</h2>
+          <p>
+            Growing up I was always curious about technology and enjoyed
+            watching YouTube videos about programming that I barely understood.
+            That sparked my passion for Computer Science and now I am proud to
+            be a First Generation Computer Science major at the University of
+            Texas - San Antonio.
+          </p>
 
+          <button
+            class="aboutMeButton"
+            type="button"
+            onclick="window.location.href='about.html'"
+          >
+            Learn More
+          </button>
+        </div>
+      </div>
 
+      <hr class="seperator" />
 
-
-        </body>
-    </main>
+      <div class="container mid">
+        <div class="block project-image">
+          <img src="images/ecommerce-website.jpg" />
+        </div>
+        <div class="block text">
+          <h2>Projects</h2>
+          <p>
+            My first major Computer Science project was creating an e-commerce
+            website. I worked with 5 of my classmates and we created a online
+            clothing store using JavaScript.
+          </p>
+          <a
+            href="https://626a0cb57f6d6c0009dd120e--incredible-syrniki-9723ad.netlify.app/"
+            target="_blank"
+          >
+            <button class="aboutMeButton" type="button">Visit Website</button>
+          </a>
+        </div>
+      </div>
+    </body>
+  </main>
 </html>
